[package]
name = "zz_metasvr"
version = "0.1.0"
authors = ["maoge"]
edition = "2018"

[dependencies]
actix-web = { version = "2.0", features = ["openssl"] }
actix-rt = "1"
openssl = { version = "0.10", features = ["v110"] }
config = "0.10.1"
toml = "0.5.6"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0"
futures = "0.3.4"
## r2d2_redis = "0.13.0"
## r2d2_postgres = "0.16.0"
## r2d2 = "0.8.8"
redis = "0.15.1"
chrono = "0.4"
log = "0.4"
env_logger = "0.7.1"
postgres = "0.17.2"
tokio-postgres = "0.5"

deadpool-redis = "0.5.2"
deadpool-postgres = { version = "0.5.5", features = ["config"] }
deadpool = "0.5.1"

uuid = { version = "0.8.1", features = ["v4"] }
rust-crypto = "0.2.36"
rand = "0.7.3"
regex = "1.3.7"
## concache = "0.2.1"
async-trait = "0.1.30"
