[package]
name = "zz_metasvr"
version = "0.1.0"
authors = ["maoge"]
edition = "2018"

[dependencies]
rust-crypto = "0.2.36"
async-trait = "0.1.30"

ntex = { version = "0.7.10", features = ["tokio", "openssl"] }

openssl = { version = "0.10", features = ["v110"] }
config = "0.13.3"
toml = "0.8.8"
serde_derive = "1.0.106"
serde = "1.0.106"
serde_json = "1.0"
futures = "0.3.4"
redis = "0.23.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.10.1"
postgres = "0.19.7"
tokio-postgres = "0.7.10"

deadpool-redis = "0.13.0"
deadpool-postgres = { version = "0.11.0" }
deadpool = "0.10.0"

uuid = { version = "1.5.0", features = ["v4"] }
rand = "0.8.5"
regex = "1.3.7"